# mentorex2

./: .dockerignore  .dvcignore  .gitattributes  .gitignore  .gitignore.orig  .pylintrc.txt  MENTOR_GUIDE.md  README.md  _BACKUP_1448.gitignore  _REMOTE_1448.gitignore  apd  backup_vit_config.json  dockerfile  dvc.yaml  local_data_files.txt  local_models_files.txt  main.py  pre-commit-config.yaml  project_files.txt  pyproject.toml  pyproject_BACKUP_3814.toml  pyproject_LOCAL_3814.toml  pyproject_REMOTE_3814.toml  requirements.txt
.dvc/: config
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
mentorex2/: .gitignore  Makefile  README.md  data.dvc  models.dvc  pyproject.toml  setup.cfg
mentorex2/data/raw/: cifar10.dvc
mentorex2/docs/: README.md  mkdocs.yml
mentorex2/docs/docs/: getting-started.md  index.md
mentorex2/mentorex2/: config.py  dataset.py  dataset2.py  dataset_imdb.py  features.py  plots.py  predict_example.py  run.py  test_data.py
mentorex2/mentorex2/modeling/: predict.py  train.py
mentorex2/models/bert/: config.json
mentorex2/models/boosting/: boosting_metrics.pkl  catboost_model.cbm  lightgbm_model.pkl  xgboost_model.json
mentorex2/models/cnn/: cnn_model.pth
mentorex2/models/rnn/: gru_metrics.pkl  lstm_metrics.pkl
mentorex2/models/vit/: config.json
mentorex2/notebooks/: Photo_model.ipynb  Text_model.ipynb
mlruns/: mlflow.db
