[project]
name = "mentorex2"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Ваши текущие пакеты (torch, mlflow, tensorflow и т.д.)
    # Добавьте все остальные пакеты БЕЗ версий:
    "absl-py",
    "aiohttp",
    "aioitertools",
    "amqp",
    "annotated-types",
    "antlr4-python3-runtime",
    "anyio",
    "appdirs",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "arrow",
    "astroid",
    "asttokens",
    "astunparse",
    "async-lru",
    "atpublic",
    "attrs",
    "autopep8",
    "awscli",
    "babel",
    "bandit",
    "beautifulsoup4",
    "billiard",
    "binaryornot",
    "bleach",
    "boto3",
    "botocore",
    "catboost",
    "certifi",
    "cffi",
    "chardet",
    "charset-normalizer",
    "click",
    "click-didyoumean",
    "click-plugins",
    "click-repl",
    "colorama",
    "comm",
    "configobj",
    "contourpy",
    "cookiecutter",
    "cookiecutter-data-science",
    "cryptography",
    "cycler",
    "datasets",
    "debugpy",
    "decorator",
    "defusedxml",
    "dictdiffer",
    "dill",
    "diskcache",
    "distlib",
    "distro",
    "docutils",
    "dpath",
    "dulwich",
    "dvc",
    "dvc-data",
    "dvc-http",
    "dvc-objects",
    "dvc-render",
    "dvc-s3",
    "dvc-studio-client",
    "dvc-task",
    "entrypoints",
    "executing",
    "fastjsonschema",
    "filelock",
    "flake8",
    "flatbuffers",
    "flatten-dict",
    "flufl-lock",
    "fonttools",
    "fqdn",
    "frozenlist",
    "fsspec",
    "funcy",
    "gast",
    "gitdb",
    "gitpython",
    "google-pasta",
    "grandalf",
    "graphviz",
    "grpcio",
    "h11",
    "h5py",
    "hf-xet",
    "httpcore",
    "httpx",
    "huggingface-hub",
    "hydra-core",
    "idna",
    "identify",
    "ipykernel",
    "ipython",
    "ipython-genutils",
    "ipython-pygments-lexers",
    "ipywidgets",
    "isoduration",
    "isort",
    "jedi",
    "jinja2",
    "jmespath",
    "joblib",
    "json5",
    "jsonpointer",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter-client",
    "jupyter-contrib-core",
    "jupyter-contrib-nbextensions",
    "jupyter-core",
    "jupyter-events",
    "jupyter-highlight-selected-word",
    "jupyter-lsp",
    "jupyter-nbextensions-configurator",
    "jupyter-server",
    "jupyter-server-terminals",
    "jupyterlab",
    "jupyterlab-pygments",
    "jupyterlab-server",
    "jupyterlab-widgets",
    "keras",
    "kiwisolver",
    "kombu",
    "lark",
    "libclang",
    "lightgbm",
    "lxml",
    "markdown",
    "markdown-it-py",
    "markupsafe",
    "matplotlib",
    "matplotlib-inline",
    "mccabe",
    "mdurl",
    "mistune",
    "ml-dtypes",
    "mpmath",
    "multidict",
    "multiprocess",
    "mypy",
    "mypy-extensions",
    "namex",
    "narwhals",
    "nbclient",
    "nbconvert",
    "nbformat",
    "nest-asyncio",
    "networkx",
    "nltk",
    "nodeenv",
    "notebook",
    "notebook-shim",
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-cufile-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-cusparselt-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvtx-cu12",
    "omegaconf",
    "opt-einsum",
    "optree",
    "orjson",
    "overrides",
    "packaging",
    "pandas",
    "pandocfilters",
    "parso",
    "pathspec",
    "pexpect",
    "pillow",
    "platformdirs",
    "plotly",
    "pre-commit",
    "prometheus-client",
    "prompt-toolkit",
    "propcache",
    "protobuf",
    "psutil",
    "ptyprocess",
    "pure-eval",
    "pyarrow",
    "pyasn1",
    "pycodestyle",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pydocstyle",
    "pydot",
    "pyflakes",
    "pygit2",
    "pygments",
    "pylint",
    "pyparsing",
    "python-dateutil",
    "python-json-logger",
    "python-slugify",
    "pytz",
    "pyyaml",
    "pyzmq",
    "referencing",
    "regex",
    "requests",
    "rfc3339-validator",
    "rfc3986-validator",
    "rfc3987-syntax",
    "rich",
    "rpds-py",
    "rsa",
    "ruamel-yaml",
    "ruamel-yaml-clib",
    "s3fs",
    "s3transfer",
    "safetensors",
    "scikit-learn",
    "scipy",
    "scmrepo",
    "seaborn",
    "semver",
    "send2trash",
    "setuptools",
    "shellingham",
    "shortuuid",
    "shtab",
    "six",
    "smmap",
    "sniffio",
    "snowballstemmer",
    "soupsieve",
    "stack-data",
    "stevedore",
    "sympy",
    "tabulate",
    "tensorboard",
    "tensorboard-data-server",
    "termcolor",
    "terminado",
    "text-unidecode",
    "threadpoolctl",
    "tinycss2",
    "tokenizers",
    "tomlkit",
    "tornado",
    "tqdm",
    "traitlets",
    "transformers",
    "types-python-dateutil",
    "typing-extensions",
    "typing-inspection",
    "tzdata",
    "uri-template",
    "urllib3",
    "vine",
    "virtualenv",
    "voluptuous",
    "wcwidth",
    "webcolors",
    "webencodings",
    "websocket-client",
    "werkzeug",
    "wheel",
    "widgetsnbextension",
    "wrapt",
    "xgboost",
    "xxhash",
    "yarl",
    "zc-lockfile",
    "numpy>=2.1.2",
    "jupyter>=1.1.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "aiohappyeyeballs>=2.6.1",
    "aiosignal>=1.4.0",
    "celery>=5.5.3",
    "cfgv>=3.4.0",
    "gto>=1.8.0",
    "jupyter-console>=6.6.3",
    "pygtrie>=2.5.0",
    "responses>=0.18.0",
    "sqltrie>=0.11.2",
    "typer>=0.17.4",
    "triton>=3.1.0",
    "git-lfs>=1.6",
    "mlflow>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
